@@ -43,7 +43,7 @@ extern void push_dolstring(int32, char *);
 extern void push_array(basicarray *, int32);
 extern void push_arraytemp(basicarray *, int32);
 extern void push_pointer(void *);
-extern void push_proc(char *, int32);
+extern fnprocinfo *push_proc(char *, int32);
 extern void push_fn(char *, int32);
 extern void push_gosub(void);
 extern void push_while(byte *);
@@ -94,6 +94,7 @@ extern void save_retfloat(lvalue, lvalue, float64);
 extern void save_retstring(lvalue, lvalue, basicstring);
 extern void restore_parameters(int32);
 extern void empty_stack(stackitem);
+extern void empty_stack_to_fn_or_proc(void);
 extern stackitem stack_unwindlocal(void);
 extern void reset_stack(byte *);
 extern void init_stack(void);
