@@ -14,6 +14,8 @@ inappropriate by distribution packagers, so 1.23.3 adds build option
   conditions, and a crash if unexpected data is received.
 - Graphics: Can now zoom the window, use command line -zoom <factor> or config
   file entry zoom <factor> in the range 1-4.
+- BASIC: Fix behaviour of RESTORE LOCAL with implied LOCAL of variables passed
+  into a function or procedure.
 
 * 1.23.4 - 18 October 2024
 - General: Fix potential buffer overflow when detokenising code.
